fix:  Доработать действия с пользователями